[package]
name = "const_sized_bit_set"
version = "0.3.0"
edition = "2021"
authors = ["Mark Wainwright <wainwrightml@gmail.com>"]
description = "A bitset with a const generic size parameter indicating the number of 64 bit words to use"
documentation = "https://docs.rs/const_sized_bit_set"
repository = "https://github.com/wainwrightmark/const_sized_bit_set"
readme = "README.md"
keywords = ["bitset", "no_std"]
categories = []
license = "MIT"
exclude = []

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_arrays = { version = "0.1", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_arrays = { version = "0.1.0" }
serde_test = "1.0"
iai-callgrind = "0.10.2"
criterion = "0.5"

[profile.bench]
debug = true

[features]
std = []
serde = ["dep:serde", "dep:serde_arrays"]

[[bench]]
name = "criterion_benchmark"
harness = false

[[bench]]
name = "iai_benchmark"
harness = false
