[package]
name = "const_sized_bit_set"
version = "0.3.0"
edition = "2024"
authors = ["Mark Wainwright <wainwrightml@gmail.com>"]
description = "A bitset with a const generic size parameter indicating the number of 64 bit words to use"
documentation = "https://docs.rs/const_sized_bit_set"
repository = "https://github.com/wainwrightmark/const_sized_bit_set"
readme = "README.md"
keywords = ["bitset", "no_std"]
categories = []
license = "MIT"
exclude = []
rust-version = "1.85"


[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_arrays = { version = "0.2", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_arrays = { version = "0.2" }
serde_test = "1.0"
iai-callgrind = "0.16"
criterion = "0.7"

[profile.bench]
debug = true

[features]
std = []
serde = ["dep:serde", "dep:serde_arrays"]

[[bench]]
name = "criterion_benchmark"
harness = false

[[bench]]
name = "iai_benchmark"
harness = false
