[package]
name = "const_sized_bit_set"
version = "0.3.0"
edition = "2024"
authors = ["Mark Wainwright <wainwrightml@gmail.com>"]
description = "Bitsets of all sizes an extensive array of associated functions."
documentation = "https://docs.rs/const_sized_bit_set"
repository = "https://github.com/wainwrightmark/const_sized_bit_set"
readme = "README.md"
keywords = ["bitset", "no_std"]
categories = []
license = "MIT"
exclude = []
rust-version = "1.92"


[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_arrays = { version = "0.2", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_arrays = { version = "0.2" }
serde_test = "1.0"
iai-callgrind = "0.16"
criterion = "0.8"

[profile.bench]
debug = true

[features]
std = []
serde = ["dep:serde", "dep:serde_arrays"]

[[bench]]
name = "criterion_benchmark"
required-features = ["std"]
harness = false

[[bench]]
name = "iai_benchmark"
required-features = ["std"]
harness = false
